Netology/22.k8s/22.8 ConfigMap-Secret-env/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netology
  labels:
    name: netology
