Netology/22.k8s/22.8 ConfigMap-Secret-env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: netology
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-svc
      port: 80
      targetPort: nginx-port
